# CrackingTheCodeInterview

./: .gitignore
CTCI/Array_and_strings/: check_permutation.cpp  hash_table.cpp  is_unique.cpp
CTCI/Linked_lists/: delete_middle_node.cpp  loop_detection_fake.cpp  palindrom.cpp  remove_duplicate.cpp
CTCI/Sort_and_search/: CMakeLists.txt  group_anagrams.cpp  quick_sort.cpp  selection.cpp  sorted_merge.cpp
CTCI/Stack_and_queues/: CMakeLists.txt  queues_via_stacks.cpp  stack_of_plates.cpp
CTCI/Tree/: delete_min.cpp  list_of_depths.cpp  min_tree.cpp  minimal_tree.cpp  print_tree.hpp  trees.hpp
Data_structure/Array_and_strings/: CMakeLists.txt
Data_structure/Linked_lists/: CMakeLists.txt  linked_list.h  loop_detection.cpp  partition.cpp  return_k_to_last.cpp  sum_lists.cpp
Data_structure/Sort_and_search/: merge_sort.cpp  sorted_merge.cpp
Data_structure/Stack_and_queues/: stack.hpp  stack_min.cpp  three_in_one.cpp
Data_structure/Tree/: minimal_tree
HakerRank/: balanced_brackets.cpp  caste_on_grid.cpp  left_rotation.cpp  sparse_array.cpp
Leetcode/array/: remove_duplicated_sorted_array.cpp
Leetcode/linked_list/: add_two_numbers.cpp  delete_node.cpp  return_n_from_last.cpp  reverse_linked_list.cpp
Leetcode/problems/: 3sum.cpp  container_water.cpp  same_tree.cpp  zigzag_conversion.cpp
Leetcode/strings/: bad_version.cpp  first_not_repeating.cpp  longest_not_repeating.cpp  longest_palindrom.cpp  merge_sort_array.cpp  reverse_integer.cpp  valid_palindrome.cpp
Leetcode/tree/: maximum_depth.cpp
Tests/: find_k_close_point.cpp  history.cpp
(+6 files in other folders)
