cmake_minimum_required(VERSION 3.16)

project(LinkedLists)

add_executable(remove_duplicate remove_duplicate.cpp)
add_executable(return_k_to_last return_k_to_last.cpp)
add_executable(delete_middle_node delete_middle_node.cpp)
add_executable(partition partition.cpp)
add_executable(sum_lists sum_lists.cpp)
add_executable(palindrom palindrom.cpp)
add_executable(loop_detection loop_detection.cpp)

